# dbt-demo

./: README.md  pyproject.toml
demo/: dbt_project.yml
demo/macros/: open_urgencies.sql
demo/models/snow_examples/: config.yml  customer_nation.sql  japan_open_orders.sql  russia_open_orders.sql  sources.yml
