[tool.poetry]
name = "dbt-demo"
version = "0.1.0"
description = ""
authors = ["Robert Engler <rengler@noodle.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-snowflake = "1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
